# openpack-torch

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-docs.yaml  test.yaml
configs/: operation-segmentation-stgcn.yaml  operation-segmentation-unet.yaml
configs/dataset/: openpack-acc.yaml  openpack-keypoint.yaml
configs/hydra/job_logging/: custom.yaml
configs/model/: st-gcn.yaml  unet.yaml
docker/: Dockerfile  sudoers
examples/: README.md  run_dcl.py  run_stgcn.py  run_unet.py
examples/configs/: common.yaml  deep-conv-lstm.yaml  path.yaml  st-gcn.yaml  unet.yaml
examples/configs/model/: dcl.yaml  st-gcn.yaml  unet.yaml
examples/configs/optimizer/: adam-exp.yaml
examples/deep-conv-lstm/: README.md  main.py  main_self_attention.py
examples/deep-conv-lstm/configs/: deep-conv-lstm-self-attention.yaml  deep-conv-lstm.yaml  operation-segmentation.yaml
examples/deep-conv-lstm/notebooks/: Tutorial_Basics_of_Modeling.ipynb  Tutorial_Basics_of_Modeling__JA.ipynb  Tutorial_DCL__JA.ipynb
examples/losnet/: README.md
examples/notebooks/: Tutorial_Basics_of_Modeling.ipynb  Tutorial_Basics_of_Modeling__JA.ipynb  Tutorial_Download_OpenPack_Dataset_to_Google_Drive.ipynb  U-Net_Change-Input-Data.ipynb  U-Net_Train-Model-and-Make-Submission-File.ipynb  U-Net_Train-Model-and-Make-Submission-File__JA.ipynb
examples/st-gcn/: README.md  main.py
examples/st-gcn/configs/: operation-segmentation.yaml  st-gcn.yaml
examples/st-gcn/notebooks/: ST-GCN_Example_01.ipynb
examples/unet/: README.md  main.py
examples/unet/configs/: operation-segmentation.yaml  unet.yaml
examples/unet/notebooks/: GETTING_STARTED__U-Net.ipynb  (+3 more)
openpack_torch/: __init__.py  index.html  lightning.html  lightning.py
openpack_torch/configs/: _hydra.py  datasets.html  datasets.py  index.html
openpack_torch/data/: __init__.py  _baseclass.py  _wrapper.py  datamodule.html  datamodule.py  datasets.html  datasets.py  index.html  preprocessing.html  preprocessing.py  utils.html  utils.py
openpack_torch/models/: __init__.py  index.html
openpack_torch/utils/: index.html  random.html  test_helper.html  test_helper.py
tests/: test_openpack_torch.py
tests/configs/: test_datasets.py  test_hydra.py
tests/data/: test_datamodule.py  test_datasets.py
tests/sample-data/: README.md
tests/utils/: test_random.py
(+66 files in other folders)
