[tool.poetry]
name = "openpack-torch"
version = "0.6.0"
description = "PyTorch extention to work around with OpenPack dataset"
authors = ["Yoshimura Naoya <yoshimura.naoya@ist.osaka-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://open-pack.github.io/home"
repository = "https://github.com/open-pack/openpack-torch"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
torch = "^1.13.1"
pandas = "^1.5.2"
hydra-core = "^1.3.1"
pytorch-lightning = "^1.8.6"
tqdm = "^4.64.1"
omegaconf = "^2.3.0"
openpack-toolkit = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
